# Ray_Tracing_Project

./: CMakeLists.txt
inc/: color.h
src/: main.cpp
